--- a/src/style.css
+++ b/src/style.css
@@ -197,3 +197,20 @@
   background-color: inherit;
   border-radius: inherit;
 }
+
+.emoji-popover {
+  position: absolute;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  width: 50%;
+  bottom: 80px;
+  transition: opacity 0.3s, transform 0.3s;
+  height: 200px;
+  display: none;
+}
+
+.visible {
+  display: block !important;
+}
