--- a/src/style.css
+++ b/src/style.css
@@ -214,3 +214,257 @@
 .visible {
   display: block !important;
 }
+
+.file-upload-division {
+  border: 1px dashed #42b0f5;
+  width: 100%;
+  border-radius: 10px;
+  padding: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  justify-content: center;
+  background-color: #fff;
+  display: none;
+}
+
+.file-upload-division i {
+  font-size: 70px;
+  color: #42b0f5;
+}
+
+.visible-flex {
+  display: flex !important;
+}
+
+.active-button-icon {
+  color: #42b0f5 !important;
+}
+
+.audio-recording-indicator {
+  position: absolute;
+  bottom: 60px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  width: 73%;
+  transition: opacity 0.3s, transform 0.3s;
+  height: 60px;
+  display: none;
+}
+
+.user-chat-actions {
+  margin: 0 10px;
+}
+
+.user-chat-actions i {
+  font-size: 18px;
+}
+
+.more-dropdown {
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 3px;
+  width: 180px;
+  height: max-content;
+  transition: opacity 0.3s, transform 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  display: none;
+}
+
+.more-dropdown {
+  font-size: 13px;
+}
+
+.more-dropdown button {
+  width: 100%;
+  border: none;
+  background-color: inherit;
+  text-align: left;
+  padding: 5px 0;
+}
+
+.more-dropdown button i {
+  margin-right: 5px;
+}
+
+.active-action-button {
+  color: #42b0f5 !important;
+}
+
+.right-section {
+  width: 300px;
+  transition: width 0.3s ease;
+  position: fixed;
+  display: block;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: none;
+}
+
+.main-section {
+  transition: width 0.3s ease !important;
+}
+
+.right-section.active {
+  display: block;
+}
+
+.main-section.active {
+  transition: width 0.3s ease !important;
+  right: 300px;
+  border-right: 1px solid #f1f1f3 !important;
+}
+
+.profile {
+  width: 100%;
+}
+
+#close-rigth-section-btn {
+  margin-right: 20px;
+}
+
+#close-rigth-section-btn i {
+  font-size: 20px;
+}
+
+.profile {
+  padding: 20px;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.basic-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #f1f1f3;
+}
+
+.profile-name {
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.profile-status {
+  font-size: 13px;
+  color: #62fca2;
+  margin-bottom: 10px;
+}
+
+.profile-actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  margin: 0 auto;
+  border-bottom: 1px solid #f1f1f3;
+  height: max-content;
+  padding: 20px 0;
+}
+
+.action-button {
+  width: 40%;
+  height: max-content;
+  border-radius: 5px;
+  border: none;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.action-button i {
+  font-size: 21px;
+}
+
+.action-button h1 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+/* First child of .profile-actions */
+.action-button:first-child {
+  background-color: #e0f4f1 !important;
+}
+
+.action-button:first-child i {
+  color: #00a389;
+}
+
+.action-button:first-child h1 {
+  color: #00a389;
+}
+
+/* Last child */
+.action-button:last-child {
+  background-color: #f7f8fa !important;
+}
+
+.action-button:last-child i {
+  color: #d5dbe3 !important;
+}
+
+.btn-icon-and-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.section-title {
+  font-size: 13px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.about-text {
+  font-size: 13px;
+}
+
+.about {
+  border-bottom: 1px solid #f1f1f3;
+  padding-bottom: 20px;
+}
+
+.action-title {
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+
+.chat-settings-actions {
+  padding: 10px 0;
+  height: max-content;
+  border-bottom: 1px solid #f1f1f3;
+  display: flex;
+  flex-direction: column !important;
+  justify-content: flex-start !important;
+}
+
+.chat-settings-action-btn {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 10px;
+  padding: 5px 0;
+}
+
+.chat-settings-action-btn i {
+  margin-right: 10px;
+}
+
+.group-count {
+  height: 100px;
+  margin-bottom: 60px;
+}
